fix popup spacing

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -146,7 +146,7 @@
   z-index: 1;
   bottom: -250%;
   left: 66.5%;
-  margin: 0 0 8px 60px;
+  margin: 0 0 8px 80px;
   text-align: left;
   padding: 5px 0 0 20px;
 }
